# arq_limpia_trabajo1

1_responsabilidad_unica/: main.py
2_sustitucion_liskov/: main.py
4_inversion_dependencias/: basedatos.py
cuarta_entrega/: cart.py  controller.py  db.py  list_products.json  main.py  product.py  repository.py  service.py  test_cart.py
primer entrega/1_responsabilidad_unica/: calculadora.py
primer entrega/3_segregacion_interfaces/: animales.py  main.py
primera_entrega/2_sustitucion_liskov/: figuras.py
primera_entrega/4_inversion_dependencias/: main.py
segunda_entrega/: adaptador.py  app.py  arq_limpia.db  pyproject.toml  repo_user.py  user.py
tercera_entrega/: Code_Smells.docx  arq_limpia.db  db_conexion.py  main.py  mysql_user_repository.py  pyproject.toml  user.py  userRepository.py  userService.py  user_controller.py
tercera_entrega/templates/: home.html
