[tool.poetry]
name = "arq-limpia"
version = "0.1.0"
description = ""
authors = ["Tatiana García <51728851+TatianaGarcia1128@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
